# repository-tugraz

./: .gitignore  Dockerfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg  package.json  playwright.config.ts  pyproject.toml
.github/workflows/: tests.yml
data/: urls.ts
docker/nginx/: Dockerfile
docker/nginx/conf.d/: default.conf
e2e/: playwright.config.ts  tsconfig.json
e2e/data/: urls.ts
e2e/helpers/: ui-helper.ts
e2e/pages/: homepage.ts
e2e/tests/: homepage.spec.ts  index.spec.ts
e2e/utils/: fixtures.ts
helpers/: ui-helper.ts
repository_tugraz/: __init__.py
tests/: homepage.spec.ts  index.spec.ts  package.json  playwright.config.ts
tests/data/: urls.ts
tests/tests/: index.spec.js
tests/utils/: fixtures.ts
translations/: babel.ini
translations/de/LC_MESSAGES/: messages.po
